[package]
name = "rcli"
version = "0.1.0"
authors = ["Akira"]
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.5.4"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.21", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
tokio = { version = "1.41.1", features = ["fs", "macros", "net", "rt", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["compression-full", "cors", "trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zxcvbn = "3.1.0"
