[package]
name = "salvo_cli_project"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clia-tracing-config = "0.2.7"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
rust-embed = "8.0.0"
salvo = { version = "0.74.3", features = ["anyhow", "logging", "cors", "oapi", "jwt-auth", "rustls", "catch-panic", "cookie", "serve-static", "test"] }
serde = "1.0.196"
serde_yaml = "0.9.31"
thiserror = "1.0.57"
time = "0.3.28"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
