[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
dashmap = "6.1.0"
rand = "0.8.5"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "rt", "macros", "net", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
