[package]
name = "jwt-exp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
jsonwebtoken = "9.3.0"
salvo = { version = "0.72.3", features = ["anyhow", "jwt-auth"] }
serde = "1.0.210"
time = "0.3.36"
tokio = { version = "1.40.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
