[package]
name = "simple-api-web-db"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
salvo = { version = "0.73.0",features = ["session"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
redis = { version = "0.27.2", features = ["r2d2"] }
hex = "0.4.3"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
serde_json = "1.0.128"
