[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }

