[package]
name = "RESTapi_actic_web"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"

[dependencies]
actix-web = "4"
serde = { version = "1.0.209", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }

[[bin]]
name = "server1"

[[bin]]
name = "teacher-service"